--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React Redux App</title>
+    <title>TodoList</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -12,3 +11,4 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+ds
